--- a/lifeExpCode/views/index.html
+++ b/lifeExpCode/views/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <p><a href="/login">登录</a><a href="/register">注册</a></p>
   </body>
 </html>
